# praina

./: .gitignore  AGENTS.md  Makefile  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.sh
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20260305_0001_initial_schema.py  20260305_0002_document_versions_and_scopes.py  20260305_0003_deliverable_wp_required.py  20260305_0004_timeline_fields.py  20260305_0005_chat_conversations_and_messages.py  20260306_0006_chat_action_proposals.py  20260306_0007_auth_and_project_chat.py  20260306_0008_team_member_user_links.py  20260306_0009_project_chat_replies_and_reactions.py  20260306_0010_fix_bot_email.py  20260306_0011_work_entity_wp_links.py  20260306_0012_soft_delete_work_entities.py  20260308_0003_risks_and_deliverable_workflow.py  20260308_0014_deliverable_review_fields.py  20260308_0015_meeting_records.py  20260308_0016_chat_message_cards.py  20260308_0017_deliverable_review_findings.py  20260308_0018_work_execution_status.py  20260309_0019_meeting_chunks_and_indexing.py  20260309_0020_meeting_action_items_and_summary.py  20260309_0021_fix_missing_timestamp_defaults.py  20260309_0022_calendar_integrations.py  20260309_0023_calendar_import_batches.py  20260310_0024_notifications.py  20260310_0025_project_health_snapshots.py  20260310_0026_project_health_issue_states.py  (+80 more)
backend/app/: main.py
backend/scripts/: debug_call_rag.py  debug_research_summary.py  extract_pdf_abstract.py  user_admin.py
backend/tests/: conftest.py  test_chat_document_references.py  test_documents_api.py  test_migration_regression.py  test_onboarding_api.py  test_project_chat_api.py  test_retrieval_agent.py  test_teaching_api.py
(+244 files in other folders)
