[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-tracker-backend"
version = "0.1.0"
description = "AI-first project tracking backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "email-validator>=2.2.0",
  "python-multipart>=0.0.9",
  "pypdf>=5.3.0",
  "pgvector>=0.3.0",
  "PyJWT>=2.9.0",
  "agno>=1.0.0",
  "ollama>=0.4.7",
  "weasyprint>=62.0",
  "markdown>=3.5",
  "pycrdt>=0.12",
  "firebase-admin>=6.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
